--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/monatheoctocat/my_package/issues"
   },
+
+  "dependencies": {
+    "my_dep": "^1.0.0",
+    "another_dep": "~2.2.0"
+  }
+
   "homepage": "https://github.com/monatheoctocat/my_package"
 }
